02052022 | LeonRivera | fixed quotes z-index

--- a/src/HeaderComponent/HeaderComponent.css
+++ b/src/HeaderComponent/HeaderComponent.css
@@ -39,8 +39,9 @@ nav{
     align-items: center;
 }
 .img-header>img{
-    max-width: 70rem;
-    height:50rem;
+    max-width: 50rem;
+    width: 100%;
+    /* height:50rem; */
     /* width: 50%; */
     /* height: ; */
 }
